# tikon_vellai_i

./: .gitignore  a_prioris.py  main.py  pyproject.toml  காலநிலை.csv  தரவுகள்.py  பூச்சி.csv  மாதிரி.py  முதன்மை.py
